Overflow x fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,7 @@ body {
 	font-family: var(--ff-primary);
 	margin: 0;
 	line-height: 1.5;
+	overflow-x: hidden;
 	/*padding: 0em, 2em, 0em, 2em;*/
 }
 
